--- a/build.yaml
+++ b/build.yaml
@@ -12,8 +12,14 @@
 #     shield: reviung41
 #
 ---
+# include:
+#   - board: nice_nano_v2
+#     shield: cradio_left
+#   - board: nice_nano_v2
+#     shield: cradio_right
+
 include:
-  - board: nice_nano_v2
-    shield: cradio_left
-  - board: nice_nano_v2
-    shield: cradio_right
+  - board: ferris
+    shield: ferris
+    keymap: config/boards/shields/ferris.keymap
+
