--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,8 @@
 
 include:
   - board: nice_nano_v2
-    shield: ferris
-    keymap: config/boards/shields/ferris.keymap
-
+    shield: ferris_left
+    keymap: ferris.keymap
+  - board: nice_nano_v2
+    shield: ferris_right
+    keymap: ferris.keymap
