--- a/config/home_mods.dtsi
+++ b/config/home_mods.dtsi
@@ -1,21 +1,21 @@
 / {
     bindings {
-        home_z = &mt LGUI Z;
-        home_r = &mt LALT R;
-        home_s = &mt LSFT S;
-        home_t = &mt LCTRL T;
+        home_z = &mt LGUI &kp Z;
+        home_r = &mt LALT &kp R;
+        home_s = &mt LSFT &kp S;
+        home_t = &mt LCTRL &kp T;
 
-        home_n = &mt RCTRL N;
-        home_e = &mt RSFT E;
-        home_i = &mt LALT I;
-        home_o = &mt RGUI O;
+        home_n = &mt RCTRL &kp N;
+        home_e = &mt RSFT &kp E;
+        home_i = &mt LALT &kp I;
+        home_o = &mt RGUI &kp O;
 
-        lt_num = &lt NUM LGUI;
-        lt_nav = &lt NAV SPC;
-        lt_sym = &lt SYM ENT;
-        lt_fn_eq = &lt FN EQUAL;
+        lt_num = &lt NUM &kp LGUI;
+        lt_nav = &lt NAV &kp SPC;
+        lt_sym = &lt SYM &kp ENT;
+        lt_fn_eq = &lt FN &kp EQUAL;
 
-        algr_bspc = &altgr BSPC;
+        algr_bspc = &altgr &kp BSPC;
 
         lgui_e = &kp LC(E);
     };
