--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,7 +1,15 @@
-# Habilitar soporte general para Bluetooth
+# Configuración general de ZMK
+CONFIG_ZMK_KEYMAP=y
+CONFIG_ZMK_SPLIT_KEYBOARD=y
+
+# Habilitar soporte de Bluetooth
 CONFIG_BT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_NUS_SERVICE=y  # Habilitar Nordic UART Service (para comunicación serial)
-CONFIG_BT_DEVICE_NAME="ZMK_Device"  # Nombre del dispositivo (puedes cambiarlo a tu preferencia)
-CONFIG_BT_RX_BUFFER_SIZE=1024  # Tamaño del buffer para la recepción de datos (ajústalo según tus necesidades)
+CONFIG_BT_NUS_SERVICE=y
+CONFIG_BT_DEVICE_NAME="ZMK_Device"
+CONFIG_BT_RX_BUFFER_SIZE=1024
+CONFIG_BT_HID=y  # Si planeas usarlo como dispositivo HID
+
+# Otros ajustes de Bluetooth (opcional)
+CONFIG_BT_TX_POWER=8  # Ajusta la potencia de transmisión según sea necesario
